--- a/lit-shoelace/package.json
+++ b/lit-shoelace/package.json
@@ -21,12 +21,14 @@
     "docs:assets": "cp node_modules/prismjs/themes/prism-okaidia.css docs/",
     "docs:serve": "es-dev-server --root-dir=docs --node-resolve --watch",
     "analyze": "wca analyze \"dev/src/**/*.ts\" --outFile custom-elements.json",
-    "serve": "es-dev-server --node-resolve --watch",
+    "serve" : "concurrently \"npm run lunaApi\" \"npm run lunaServer\"",
     "test": "karma start karma.conf.cjs",
     "test:watch": "karma start karma.conf.cjs --auto-watch=true --single-run=false",
     "test:update-snapshots": "karma start karma.conf.cjs --update-snapshots",
     "test:prune-snapshots": "karma start karma.conf.cjs --prune-snapshots",
-    "checksize": "rollup -c ; cat my-element.bundled.js | gzip -9 | wc -c ; rm my-element.bundled.js"
+    "checksize": "rollup -c ; cat my-element.bundled.js | gzip -9 | wc -c ; rm my-element.bundled.js",
+    "lunaServer": "es-dev-server --node-resolve --watch",
+    "lunaApi": "ts-node ../api.consumet.org/src/main.ts"
   },
   "keywords": [
     "web-components",
@@ -51,6 +53,7 @@
     "@typescript-eslint/eslint-plugin": "^2.27.0",
     "@typescript-eslint/parser": "^2.27.0",
     "chai": "^4.2.0",
+    "concurrently": "^8.2.2",
     "deepmerge": "^4.2.2",
     "es-dev-server": "^1.46.1",
     "eslint": "^6.8.0",
@@ -65,6 +68,7 @@
     "rollup-plugin-filesize": "^7.0.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-terser": "^5.3.0",
+    "ts-node": "^10.9.1",
     "typescript": "^3.8.3",
     "web-component-analyzer": "^1.0.3"
   }
