--- a/lit-shoelace/tsconfig.json
+++ b/lit-shoelace/tsconfig.json
@@ -9,8 +9,8 @@
     "outDir": "./src-outDir",
     "rootDir": "dev/src",
     "strict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
     "moduleResolution": "node",
@@ -24,6 +24,6 @@
       }
     ]
   },
-  "include": ["dev/src/**/*.ts"],
+  "include": ["dev/src/**/*.ts", "dev/src/bases/luna-base-element.ts", "dev/src/bases/styles/luna-base-element-styles.ts", "dev/src/components/pages/styles/home-styles.ts"],
   "exclude": []
 }
