--- a/lit-shoelace/tsconfig.json
+++ b/lit-shoelace/tsconfig.json
@@ -1,5 +1,7 @@
 {
   "compilerOptions": {
+    "allowJs": true,
+    "allowUnreachableCode": true,
     "target": "es2017",
     "module": "es2015",
     "lib": ["es2017", "dom", "dom.iterable"],
@@ -12,6 +14,7 @@
     "noUnusedLocals": false,
     "noUnusedParameters": false,
     "noImplicitReturns": true,
+    "noImplicitAny": false,
     "noFallthroughCasesInSwitch": true,
     "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
