--- a/lit-shoelace/package.json
+++ b/lit-shoelace/package.json
@@ -21,7 +21,7 @@
     "docs:assets": "cp node_modules/prismjs/themes/prism-okaidia.css docs/",
     "docs:serve": "es-dev-server --root-dir=docs --node-resolve --watch",
     "analyze": "wca analyze \"dev/src/**/*.ts\" --outFile custom-elements.json",
-    "serve": "concurrently \"npm run lunaApi\" \"npm run lunaServer\"",
+    "serve": "tsc && concurrently \"npm run lunaApi\" \"npm run lunaServer\"",
     "test": "karma start karma.conf.cjs",
     "test:watch": "karma start karma.conf.cjs --auto-watch=true --single-run=false",
     "test:update-snapshots": "karma start karma.conf.cjs --update-snapshots",
@@ -43,9 +43,9 @@
     "lit-element": "^2.3.1"
   },
   "devDependencies": {
-    "@11ty/eleventy": "^0.10.0",
+    "@11ty/eleventy": "^2.0.1",
     "@11ty/eleventy-plugin-syntaxhighlight": "^3.0.1",
-    "@open-wc/testing": "^2.5.10",
+    "@open-wc/testing": "^4.0.0",
     "@open-wc/testing-karma": "^3.3.11",
     "@rollup/plugin-replace": "^2.3.1",
     "@types/chai": "^4.2.11",
@@ -59,8 +59,8 @@
     "eslint": "^6.8.0",
     "karma": "^4.4.1",
     "karma-chai": "^0.1.0",
-    "karma-mocha": "^1.3.0",
-    "lit-analyzer": "^1.1.10",
+    "karma-mocha": "^2.0.1",
+    "lit-analyzer": "^2.0.3",
     "mocha": "^7.1.1",
     "prettier": "^2.0.4",
     "rimraf": "^3.0.2",
