--- a/lit-shoelace/package.json
+++ b/lit-shoelace/package.json
@@ -38,7 +38,9 @@
   "author": "The Polymer Authors",
   "license": "BSD-3-Clause",
   "dependencies": {
+    "@consumet/extensions": "^1.5.6",
     "@shoelace-style/shoelace": "^2.15.0",
+    "axios": "^1.6.8",
     "lit": "^3.1.3",
     "lit-element": "^2.3.1"
   },
