--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,7 +9,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  http: ^1.0.0
+  http: ^1.2.1
+  provider: ^6.1.2
+
 
 dev_dependencies:
   flutter_test:
