--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
   video_player: ^2.8.6
   provider: ^6.1.2
   synchronized: ^3.1.0+1
+  url_launcher: ^6.2.6
+
 
 
 dev_dependencies:
