--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,10 +11,11 @@ dependencies:
     sdk: flutter
   http: ^1.2.1
   html: ^0.15.4
-  video_player: ^2.8.6
   provider: ^6.1.2
   synchronized: ^3.1.0+1
   url_launcher: ^6.2.6
+  video_player: ^2.8.6
+  chewie: ^1.8.1
 
 
 
