--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,10 +13,12 @@ dependencies:
   html: ^0.15.4
   provider: ^6.1.2
   synchronized: ^3.1.0+1
+  
   url_launcher: ^6.2.6
+  #video
+  webview_windows: ^0.4.0
   video_player: ^2.8.6
   chewie: ^1.8.1
-
 
 
 dev_dependencies:
