--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,11 +10,13 @@ dependencies:
   flutter:
     sdk: flutter
   http: ^1.2.1
+  url_launcher: ^6.2.6
+  synchronized: ^3.1.0+1
+  #Temp storage
+  shared_preferences: ^2.2.3
+  #text
   html: ^0.15.4
   provider: ^6.1.2
-  synchronized: ^3.1.0+1
-  
-  url_launcher: ^6.2.6
   #video
   webview_windows: ^0.4.0
   video_player: ^2.8.6
